# paperdiff

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  compare.pipe  compose.yml  package-lock.json  package.json
.claude/agents/: frontend.md  pipeline.md  verification.md
.codex/agents/: README.md  frontend.md  pipeline.md  verification.md
.github/: pull_request_template.md
artifacts/: README.md  model-card.md  paperdiff_metrics.json
contracts/: README.md  challenge.md  compare.md
data/: README.md
deploy/: README.md  adapter.py  paperdiff-compare.pipe
docs/: PRD.md  architecture.md  demo-script.md  hackathon-backlog.md  handoff-todo.md  integrations.md  pipeline-handoff.md  pipeline-worklog.md  repository-guide.md  team-playbook.md
evaluation/: README.md  metrics.py  test_metrics.py
ml/: 3_baselines.py  5_export_model.py  6_upload_weights_hf.py  7_load_model_from_huggingface.py  README.md  export-contract.md  model-card.md  train.py
notebooks/: README.md
pipeline/: compare.pipe
pipelines/: README.md  challenge.pipe  compare.pipe  preflight.mjs  preflight.test.mjs
services/api/: AGENTS.md  Dockerfile  pyproject.toml
services/api/paperdiff_api/: __init__.py  config.py  main.py  models.py
services/api/paperdiff_api/integrations/: __init__.py  base.py  linkup.py  rocketride.py
services/api/paperdiff_api/pipeline/: __init__.py  compare.py  demo.py
services/api/paperdiff_api/verification/: __init__.py  provenance.py  relationship.py
services/api/tests/: test_api.py  test_provenance.py
(+54 files in other folders)
